syntax = "proto3";

option go_package = "github.com/MasLazu/dev-ops-porto/missionservice";

enum TriggerMissionEvent {
    MISSION_EVENT_UNKNOWN = 0;
    MISSION_EVENT_CREATE_ASSIGNMENT = 1;
    MISSION_EVENT_DONE_ASSIGNMENT = 2;
    MISSION_EVENT_UNDONE_ASSIGNMENT = 3;
    MISSION_EVENT_DELETE_ASSIGNMENT = 4;
}

message TriggerMissionEventResponse {}

message TriggerMissionEventRequest {
    string user_id = 1;
    TriggerMissionEvent event = 2;
}


service MissionService {
    rpc TriggerMissionEvent(TriggerMissionEventRequest) returns (TriggerMissionEventResponse);
}